<resources>
    <string name="app_name">S.R. Turnos</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aún no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">Registrarse</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor, completa tus datos</string>
    <string name="btn_create_appointment">Reservar turno</string>
    <string name="btn_my_appointments">Mis turnos</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Registrar turno</string>
    <string name="label_description">Descripcion</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_tpye">Tipo de turno</string>
    <string name="rb_type_consultation">Consulta</string>
    <string name="rb_type_examination">Examen</string>
    <string name="rb_type_operation">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha para el turno</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Turno médico # %1$d</string>
    <string name="item_appointment_date">Atención el día %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_agaian">Presione una vez más para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estás seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habías ingresado se perderán.</string>
    <string name="dialog_create_appointment_exit_positive">Si, salir.</string>
    <string name="dialog_create_appointment_exit_negative">Continuar registro</string>
    <string name="validate_appointment_description">La descripción es demasiado corta</string>
    <string name="label_scheduled_time">Hora del turno</string>
    <string name="label_confirm_appointment_data">Datos del turno</string>
    <string name="validate_appointment_scheduled_date">Debe ingresar una fecha correctamente</string>
    <string name="validate_appointment_time">Es necesario definir un horario para el turno</string>
    <string name="error_loading_specialties">Ocurrió un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrió un problema al cargar los médicos</string>
    <string name="error_loading_hours">No se ha podido cargar los horarios correspondinetes</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y una fecha para ver sus horas disponibles.</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles para el médico en el día seleccionado.</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor.</string>
    <string name="email_or_password_empty">El correo y la contraseña no pueden estar vacios.</string>
    <string name="error_invalid_credentials">Credenciales incorrectas</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="login_failure">Los campos deben ser ingresados correctamente</string>
    <string name="item_appointment_created_at"> "Turno reservado el día %1$s con la siguiente descripción: " </string>
    <string name="create_appointment_success">Turno confirmado</string>
    <string name="create_appointment_error">Ocurrió un error inesperado reservando el turno. Intente nuevamente más tarde.</string>
    <string name="tv_register_password_confirmation">Confirmar clave</string>
    <string name="error_register_empty_fields">Por favor, complete todos los campos.</string>
    <string name="error_register_password_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_register_user">Ha ocurrido un error al intentar registrar el usuario.</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fcm_message">title</string>
    <string name="btn_edit_profile">Mi perfil</string>
    <string name="label_edit_profile">Editar datos básicos</string>
    <string name="label_phone">Número de teléfono</string>
    <string name="label_address">Dirección</string>
    <string name="btn_save">Guardar cambios</string>
    <string name="profile_success_message">Los cambios se han guardado corretamente</string>
    <string name="error_profile_name">¡El nombre es un dato importante!</string>
    <string name="you_need_a_phone">¡Debes asociar un teléfono a tu cuenta!</string>
</resources>
