<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvStep1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:contentPadding="12dp"
    tools:context=".ui.CreateAppointmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/label_description" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_specialty" />

        <Spinner
            android:id="@+id/spinnerSpecialties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_tpye" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rgType"
            android:checkedButton="@id/rbType1">

            <RadioButton
                android:id="@+id/rbType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_type_consultation" />

            <RadioButton
                android:id="@+id/rbType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_type_examination" />

            <RadioButton
                android:id="@+id/rbTyp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_type_operation" />
        </RadioGroup>


        <Button
            android:id="@+id/btnNextToStep2"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:text="@string/btn_next" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
