<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/login_background4"
android:orientation="vertical"
android:padding="12dp"
tools:context=".MainActivity">
<!---Extiende de view group-->

<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_horizontal"
    android:text="@string/label_login"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
    android:textColor="@color/white" />
<!---Extiende de views-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDarkTransparent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_login"
        android:textColor="@color/whiteTransparent" />

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="18dp"
        android:gravity="center_horizontal"
        android:text="@string/label_go_to_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

</LinearLayout>

</LinearLayout>